# spooler

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  TODO.tasks  aclocal.m4  config.h  config.h.in  configure  configure.ac  ecf_spooler  setup_fpgto.pl  setup_totcnf.pl  spooler.dia  spooler_setup.sh
cfg/: erros.txt  erros.txt~  modelo_cfg.txt  modelo_cfg.txt~  spooler.cfg  spooler.cfg~
man/: Makefile.am  Makefile.in  rc4_crypt.pod  spooler.cfg.pod  spooler.pod
spooler/: spooler.cfg  spooler.cfg~
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  aliquota.cc  aliquota.cc~  aliquota.h  aliquota.h~  bemafi.h  bemafi.h.gch  bemafi.h~  bemafi_cv0909.h  bemafi_cv0909.h~  bemalog_14-11-2015.xml  cmdtags.cc  cmdtags.h  collector.cc  collector.cc~  collector.h  collector.h~  datapair.cc  datapair.h  ecf.cc  ecf.h  ecf.h~  ecfbematech.cc  ecfbematech.cc~  ecfbematech.h  ecfbematech.h~  ecfbematechcv0909.cc  ecfbematechcv0909.cc~  ecfbematechcv0909.h  ecfbematechcv0909.h~  ecfbroker.cc  ecfbroker.cc~  ecfbroker.h  ecfbroker.h~  excp.h  excp.h.gch  factory.cc  (+50 more)
src/.deps/: aliquota.Po  cmdtags.Po  collector.Po  datapair.Po  ecf.Po  ecfbematech.Po  ecfbroker.Po  factory.Po  fs.Po  loopctrl.Po  main.Po  packet.Po  pktparam.Po  pktrequest.Po  pktresponse.Po  pkttags.Po  session.Po  singleton.Po  spooler-aliquota.Po  spooler-cmdtags.Po  spooler-collector.Po  spooler-datapair.Po  spooler-ecf.Po  spooler-ecfbematech.Po  spooler-ecfbematechcv0909.Po  spooler-ecfbroker.Po  spooler-factory.Po  spooler-fs.Po  spooler-log.Po  spooler-loopctrl.Po  spooler-main.Po  spooler-packet.Po  spooler-pktparam.Po  spooler-pktrequest.Po  spooler-pktresponse.Po  spooler-pkttags.Po  spooler-session.Po  spooler-singleton.Po  spooler-txtcollector.Po  spooler-txtreader.Po  (+4 more)
tests/: Makefile  Makefile.am  test_fs.cpp
tests/gtest/: gtest.h
utils/rc4_crypt/: Makefile.am  Makefile.in  rc4_crypt.c
