dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(spooler, 3.5-7a)


AC_SUBST(APP_DESCR)


AC_SUBST(APP_RELEASE)


AC_SUBST(APP_STATUS)


AC_SUBST(APP_VERSION)


AC_SUBST(APP_NAME)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC






AM_PROG_LIBTOOL






AC_OUTPUT([
Makefile
src/Makefile

])
