## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS = \
	 -Wall \
	 -g \
	 -m32

bin_PROGRAMS = spooler

spooler_SOURCES = \
	main.cc  \
	pktparam.h  \
	pktparam.cc  \
	packet.h  \
	packet.cc  \
	pkttags.h  \
	pkttags.cc  \
	pktrequest.h  \
	pktrequest.cc  \
	pktresponse.h  \
	pktresponse.cc  \
	cmdtags.h  \
	cmdtags.cc  \
	datapair.h  \
	datapair.cc  \
	txtwriter.h  \
	txtwriter.cc  \
	rspwriter.hpp  \
	rqtreader.hpp  \
	txtreader.h  \
	txtreader.cc  \
	txttags.h  \
	collector.h  \
	collector.cc  \
	fs.h  \
	fs.cc  \
	loopctrl.h  \
	loopctrl.cc  \
	txtcollector.h  \
	txtcollector.cc  \
	bemafi.h  \
	ecfbematech.h  \
	ecfbematech.cc  \
	ecf.h  \
	ecf.cc  \
	excp.h  \
	singleton.h  \
	singleton.cc  \
	factory.h  \
	factory.cc  \
	utils.h  \
	aliquota.h  \
	aliquota.cc  \
	ecfbroker.h  \
	ecfbroker.cc  \
	session.h  \
	session.cc  \
	vrstags.h  \
	log.h  \
	log.cc  \
	bemafi_cv0909.h  \
	ecfbematechcv0909.h  \
	ecfbematechcv0909.cc  

spooler_CFLAGS = \
	-m32

spooler_CXXFLAGS = \
	-m32

spooler_LDFLAGS = \
	-m32

spooler_LDADD = \
	-ldl \
	-lbemafiscal \
	-lpthread

AM_CXXFLAGS = \
	-m32

